--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.7.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.metaAnalitics</groupId>
-	<artifactId>mAnalitics</artifactId>
+	<groupId>com.metaanalitics</groupId>
+	<artifactId>manalitics</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mAnalitics</name>
+	<name>manalitics</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -49,13 +49,6 @@
 
 	<build>
 		<plugins>
-		
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-resources-plugin</artifactId>
-			<version>3.1.0</version><!--$NO-MVN-MAN-VER$ -->
-		</plugin>
-
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
